--- a/leyou-parent/leyou-item/leyou-item-service/pom.xml
+++ b/leyou-parent/leyou-item/leyou-item-service/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>leyou-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--rabbitmq-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
