--- a/leyou-parent/pom.xml
+++ b/leyou-parent/pom.xml
@@ -15,6 +15,8 @@
         <module>leyou-upload</module>
         <module>leyou-search</module>
         <module>leyou-goods-web</module>
+        <module>leyou-user</module>
+        <module>leyou-sms-service</module>
     </modules>
     <packaging>pom</packaging>
 
