--- a/leyou-parent/leyou-common/pom.xml
+++ b/leyou-parent/leyou-common/pom.xml
@@ -11,6 +11,19 @@
 
     <groupId>com.leyou.common</groupId>
     <artifactId>leyou-common</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
