--- a/leyou-parent/leyou-goods-web/pom.xml
+++ b/leyou-parent/leyou-goods-web/pom.xml
@@ -33,5 +33,10 @@
             <artifactId>leyou-item-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--rabbitmq-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
     </dependencies>
 </project>
