--- a/leyou-parent/leyou-auth/leyou-auth-common/pom.xml
+++ b/leyou-parent/leyou-auth/leyou-auth-common/pom.xml
@@ -6,30 +6,32 @@
         <artifactId>leyou-parent</artifactId>
         <groupId>com.leyou</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.leyou.gateway</groupId>
-    <artifactId>leyou-gateway</artifactId>
-
+    <groupId>com.leyou.auth</groupId>
+    <artifactId>leyou-auth-common</artifactId>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
         </dependency>
         <dependency>
-            <groupId>com.leyou.auth</groupId>
-            <artifactId>leyou-auth-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.leyou.common</groupId>
-            <artifactId>leyou-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
         </dependency>
+
     </dependencies>
+
 </project>
