--- a/leyou-parent/leyou-user/leyou-user-interface/pom.xml
+++ b/leyou-parent/leyou-user/leyou-user-interface/pom.xml
@@ -25,5 +25,9 @@
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
     </dependencies>
 </project>
