完成订单支付模块

--- a/leyou-parent/pom.xml
+++ b/leyou-parent/pom.xml
@@ -21,6 +21,7 @@
         <module>leyou-auth/leyou-auth-common</module>
         <module>leyou-auth/leyou-auth-service</module>
         <module>leyou-cart</module>
+        <module>leyou-order</module>
     </modules>
     <packaging>pom</packaging>
 
