--- a/leyou-parent/leyou-gateway/src/main/resources/application.yaml
+++ b/leyou-parent/leyou-gateway/src/main/resources/application.yaml
@@ -16,6 +16,7 @@ zuul:
     user-service: /user/** # 用户信息微服务映射路径
     auth-service: /auth/** #授权中心微服务
     cart-service: /cart/** #购物车微服务
+    order-service: /order/** #订单服务
   ignored-services:
     - upload-service
   add-host-header: true
